Changelog
=========

2.0.7 (unreleased)
------------------

- Fix regression in normalizer: handle POSIX locale identifiers
  in addition to IETF language codes.
  [davisagli]


2.0.6 (2013-04-06)
------------------

- Fixed does not correctly handle client HTTP_ACCEPT_LANGUAGE is
  language/country combination.
  [jianaijun]

2.0.5 (2013-01-13)
------------------

- Revert 97645c76f5e0cf14e525f702c66fe0c4de8cb0fc.
  [esteele]


2.0.4 (2013-01-13)
------------------

- Add Latvian flag to language list
  [maartenkling]

2.0.3 (2012-10-16)
------------------

- Removed unknown cctld entry for um.
  [hannosch]

- Added new cctld entries for: asia, kp, ss and xxx.
  [hannosch]

- Added new country codes and flags for: bl, bq, cw, mf, ss and sx.
  [hannosch]

- Clarify and test availability of reserved country codes an and cs.
  [hannosch]

- Clarify and test availability of deprecated language codes mo and sh.
  [hannosch]

- Removed invalid me language code added in 2007. me is only a country code.
  [hannosch]

- Correct language code for Javanese from jw to jv.
  [hannosch]

- Added missing ISO-639-1 language codes: ae, ak, an, bm, ce, ch, cr, cu, cv,
  dv, ee, ff, ho, ht, hz, ig, ii, io, kg, ki, kj, kr, kv, lg, lu, mh, nb, ng,
  nv, ny, oj, os, pi, sc, vk.
  [hannosch]

- URLNormalizer should remove all ignored characters before making any
  substitutions.
  [esteele]

- Added three new countries and its corresponding flags. Also updated
  the internet top level domains list. Added countries are Kosovo,
  Montenegro and Serbia.
  [alecghica]

- Fixed tests not to fail when a new country, language or domain is added.
  [alecghica]

2.0.2 (2012-08-29)
------------------

- Avoid infinite loop if buggy queryUtility() returns normalizer instance
  of wrong class. Fixes http://dev.plone.org/ticket/11630.
  [patch by Sardtok, applied by kleist]

2.0.1 (2012-07-02)
------------------

- Use `zope.browserresource`.
  [hannosch]
